[gd_scene load_steps=2 format=3 uid="uid://bwj8n2k5o7yxm"]

[ext_resource type="Script" uid="uid://bq7xm5wlatn3v" path="res://scenes/minigames/password_strength/password_strength_trainer.gd" id="1_trainer"]

[node name="PasswordStrengthTrainer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_trainer")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "üîê ENTRENADOR DE CONTRASE√ëAS SEGURAS üîê"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="MarginContainer/Panel/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "‚≠ê Puntos: 0"

[node name="NivelLabel" type="Label" parent="MarginContainer/Panel/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "üìä Nivel: 1/5"
horizontal_alignment = 2

[node name="ChallengeContainer" type="PanelContainer" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="ChallengeLabel" type="Label" parent="MarginContainer/Panel/VBoxContainer/ChallengeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "üéØ DESAF√çO 1: Crea una contrase√±a con al menos 8 caracteres"
horizontal_alignment = 1
autowrap_mode = 2

[node name="InputContainer" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="InputLabel" type="Label" parent="MarginContainer/Panel/VBoxContainer/InputContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Contrase√±a:"
vertical_alignment = 1

[node name="PasswordInput" type="LineEdit" parent="MarginContainer/Panel/VBoxContainer/InputContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
placeholder_text = "Escribe tu contrase√±a aqu√≠..."

[node name="StrengthContainer" type="VBoxContainer" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="StrengthLabel" type="Label" parent="MarginContainer/Panel/VBoxContainer/StrengthContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Escribe una contrase√±a..."
horizontal_alignment = 1

[node name="StrengthBar" type="ProgressBar" parent="MarginContainer/Panel/VBoxContainer/StrengthContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 32
show_percentage = false

[node name="HSeparator" type="HSeparator" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="FeedbackContainer" type="VBoxContainer" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FeedbackTitle" type="Label" parent="MarginContainer/Panel/VBoxContainer/FeedbackContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "üìä An√°lisis en tiempo real:"

[node name="FeedbackScroll" type="ScrollContainer" parent="MarginContainer/Panel/VBoxContainer/FeedbackContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FeedbackList" type="VBoxContainer" parent="MarginContainer/Panel/VBoxContainer/FeedbackContainer/FeedbackScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TipsContainer" type="VBoxContainer" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TipsTitle" type="Label" parent="MarginContainer/Panel/VBoxContainer/TipsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "üí° Consejos de seguridad:"

[node name="TipsScroll" type="ScrollContainer" parent="MarginContainer/Panel/VBoxContainer/TipsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TipsList" type="VBoxContainer" parent="MarginContainer/Panel/VBoxContainer/TipsContainer/TipsScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ResultadoContainer" type="PanelContainer" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="ResultadoLabel" type="Label" parent="MarginContainer/Panel/VBoxContainer/ResultadoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Resultado aqu√≠..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BtnGenerate" type="Button" parent="MarginContainer/Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "üé≤ Generar Ejemplo"

[node name="BtnCheck" type="Button" parent="MarginContainer/Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "‚úÖ Verificar Contrase√±a"

[node name="BtnSiguiente" type="Button" parent="MarginContainer/Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "‚û°Ô∏è Siguiente Nivel"
